--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,143 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Motivingo Privacy Policy</title>
+  <style>
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; line-height: 1.6; color: #111; max-width: 860px; margin: 32px auto; padding: 0 20px; }
+    h1, h2, h3 { line-height: 1.3; }
+    h1 { font-size: 28px; }
+    h2 { font-size: 18px; margin-top: 24px; }
+    p { margin: 10px 0; }
+    ul { margin: 8px 0 8px 18px; }
+    .muted { color: #666; }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p class="muted">Effective Date: 25 January 2026</p>
 
+  <h2>1. OVERVIEW (WHAT WE CARE ABOUT)</h2>
+  <p>We aim to collect as little data as possible while still providing a high-quality experience. Motivingo is designed to help users focus through study sessions, points, rewards, and (where available) iOS-based focus/blocking features.</p>
+
+  <h2>2. INFORMATION WE MAY COLLECT</h2>
+  <p>Depending on how you use Motivingo and which features you enable, the App may process the following categories of information:</p>
+
+  <h3>2.1 Information You Provide (User-Entered Data)</h3>
+  <p>You may choose to enter information such as:</p>
+  <ul>
+    <li>study sessions (e.g., duration, subject, notes),</li>
+    <li>tasks, goals, schedules, or categories,</li>
+    <li>custom rewards and reward names,</li>
+    <li>preferences and settings within the App.</li>
+  </ul>
+
+  <h3>2.2 Device and App Usage Data (Operational Data)</h3>
+  <p>To operate and improve the App, we may collect or process:</p>
+  <ul>
+    <li>device type, iOS version, language, region,</li>
+    <li>app version and basic diagnostics,</li>
+    <li>app usage events (e.g., screens viewed, feature interactions),</li>
+    <li>crash logs and performance data.</li>
+  </ul>
+
+  <h3>2.3 Purchase and Subscription Information</h3>
+  <p>If you purchase a subscription or other in-app purchase:</p>
+  <ul>
+    <li>payments are processed by Apple (we do not receive your full payment details),</li>
+    <li>we may receive purchase/entitlement status (e.g., whether you are subscribed) to unlock premium features,</li>
+    <li>we may receive non-sensitive transaction-related identifiers from Apple or our subscription provider to validate access.</li>
+  </ul>
+
+  <h3>2.4 Focus / Blocking Permissions (Apple Screen Time / FamilyControls)</h3>
+  <p>If you enable focus or blocking features, iOS may require permissions. The App may read or store permission state (e.g., “enabled/disabled”) to provide the feature.</p>
+  <p>Important: We do not claim to access the content of other apps. Blocking is implemented using Apple’s approved system frameworks, subject to iOS limitations and your permissions.</p>
+
+  <h2>3. INFORMATION WE DO NOT INTEND TO COLLECT</h2>
+  <p>We do not intend to collect:</p>
+  <ul>
+    <li>your contacts, photos, microphone recordings, or precise GPS location,</li>
+    <li>the content of other apps on your phone,</li>
+    <li>your Apple ID password or full payment card details (Apple handles payment).</li>
+  </ul>
+
+  <h2>4. HOW WE USE INFORMATION</h2>
+  <p><strong>4.1 Provide Core Features</strong><br>
+  - to run timers, sessions, streaks, points, rewards, and progress,<br>
+  - to store your preferences and configurations,<br>
+  - to enable premium features when you have an active entitlement.</p>
+  <p><strong>4.2 Improve the App</strong><br>
+  - to understand which features work well,<br>
+  - to fix bugs, prevent crashes, and improve performance,<br>
+  - to test improvements and maintain quality.</p>
+  <p><strong>4.3 Security and Abuse Prevention</strong><br>
+  - to detect fraudulent use, entitlement bypass attempts, or misuse.</p>
+  <p><strong>4.4 Communication</strong><br>
+  - to respond to support and privacy requests you send to kemal@buhur.nl.</p>
+
+  <h2>5. WHERE YOUR DATA IS STORED</h2>
+  <p>Motivingo may store data:</p>
+  <ul>
+    <li>locally on your device (for example: settings, sessions, rewards),</li>
+    <li>and/or in a backend service (if the App supports cloud sync or server-based features).</li>
+  </ul>
+  <p>If cloud storage is used, we aim to use reputable providers and protect data through reasonable security measures.</p>
+  <p>Note: The exact storage method may vary by version and features enabled. If the App displays an in-app “Data &amp; Privacy” section, it may provide additional details.</p>
+
+  <h2>6. SHARING OF INFORMATION</h2>
+  <p>We do not sell your personal information.</p>
+  <p>We may share limited information only in the following cases:</p>
+  <p><strong>6.1 Service Providers</strong><br>
+  We may use service providers to support the App (for example: analytics, crash reporting, subscription verification). They may process data on our behalf and only for the purposes described in this Privacy Policy.</p>
+  <p><strong>6.2 Legal Requirements</strong><br>
+  We may disclose information if required to comply with a legal obligation, enforce our terms, or protect rights and safety.</p>
+  <p><strong>6.3 Business Changes</strong><br>
+  If the App is involved in a merger, acquisition, or asset sale, your information may be transferred as part of that transaction, subject to applicable law.</p>
+
+  <h2>7. ANALYTICS AND CRASH REPORTING</h2>
+  <p>We may use analytics and crash reporting to:</p>
+  <ul>
+    <li>understand app performance,</li>
+    <li>diagnose technical problems,</li>
+    <li>improve the user experience.</li>
+  </ul>
+  <p>Where feasible, we prefer aggregated or pseudonymized insights. If your iOS settings allow limiting tracking, we respect platform-level privacy controls.</p>
+
+  <h2>8. YOUR CHOICES AND CONTROLS</h2>
+  <p><strong>8.1 Permissions</strong><br>
+  You can grant or revoke permissions (where applicable) via iOS Settings. Some features may not work without permissions.</p>
+  <p><strong>8.2 Subscriptions</strong><br>
+  You can manage subscriptions through your Apple ID settings: Settings → Apple ID → Subscriptions.</p>
+  <p><strong>8.3 Managing Your Data</strong><br>
+  Depending on the App version, you may be able to delete certain data in-app (e.g., reset progress, remove sessions). If you cannot find this option, email us at kemal@buhur.nl and we will assist where reasonably possible.</p>
+
+  <h2>9. DATA RETENTION</h2>
+  <p>We retain data only as long as needed to:</p>
+  <ul>
+    <li>provide the App,</li>
+    <li>comply with legal obligations,</li>
+    <li>resolve disputes and enforce agreements,</li>
+    <li>improve and secure the App.</li>
+  </ul>
+  <p>If data is stored locally on your device, deleting the App typically removes local data (unless iOS retains data or you use iCloud backups).</p>
+
+  <h2>10. SECURITY</h2>
+  <p>We use reasonable administrative, technical, and organizational safeguards to protect information. However, no method of storage or transmission is 100% secure, and we cannot guarantee absolute security.</p>
+
+  <h2>11. CHILDREN’S PRIVACY</h2>
+  <p>Motivingo is not intended for children under 13. We do not knowingly collect personal information from children under 13. If you believe a child has provided personal information, contact us at kemal@buhur.nl, and we will take appropriate steps.</p>
+
+  <h2>12. INTERNATIONAL USERS</h2>
+  <p>If you use the App outside the Netherlands, your information may be processed in countries where our service providers operate. We take steps to protect data in line with applicable privacy laws.</p>
+
+  <h2>13. YOUR PRIVACY RIGHTS (EU/EEA)</h2>
+  <p>If you are located in the EU/EEA, you may have rights under the GDPR, including access, correction, deletion, restriction or objection to processing, and data portability. To exercise these rights, contact: kemal@buhur.nl. We may need to verify your request before acting.</p>
+
+  <h2>14. CHANGES TO THIS PRIVACY POLICY</h2>
+  <p>We may update this Privacy Policy from time to time. If changes are material, we will take reasonable steps to notify you within the App. Continued use after the effective date means you accept the updated Privacy Policy.</p>
+
+  <h2>15. CONTACT</h2>
+  <p>For questions, concerns, or requests related to privacy:<br>Email: kemal@buhur.nl</p>
+</body>
+</html>
