--- a/privacy.html
+++ b/privacy.html
@@ -74,7 +74,7 @@
   <p><strong>4.3 Security and Abuse Prevention</strong><br>
   - to detect fraudulent use, entitlement bypass attempts, or misuse.</p>
   <p><strong>4.4 Communication</strong><br>
-  - to respond to support and privacy requests you send to kemal@buhur.nl.</p>
+  - to respond to support and privacy requests you send to us.</p>
 
   <h2>5. WHERE YOUR DATA IS STORED</h2>
   <p>Motivingo may store data:</p>
@@ -110,7 +110,7 @@
   <p><strong>8.2 Subscriptions</strong><br>
   You can manage subscriptions through your Apple ID settings: Settings → Apple ID → Subscriptions.</p>
   <p><strong>8.3 Managing Your Data</strong><br>
-  Depending on the App version, you may be able to delete certain data in-app (e.g., reset progress, remove sessions). If you cannot find this option, email us at kemal@buhur.nl and we will assist where reasonably possible.</p>
+  Depending on the App version, you may be able to delete certain data in-app (e.g., reset progress, remove sessions). If you cannot find this option, contact us and we will assist where reasonably possible.</p>
 
   <h2>9. DATA RETENTION</h2>
   <p>We retain data only as long as needed to:</p>
@@ -126,18 +126,18 @@
   <p>We use reasonable administrative, technical, and organizational safeguards to protect information. However, no method of storage or transmission is 100% secure, and we cannot guarantee absolute security.</p>
 
   <h2>11. CHILDREN’S PRIVACY</h2>
-  <p>Motivingo is not intended for children under 13. We do not knowingly collect personal information from children under 13. If you believe a child has provided personal information, contact us at kemal@buhur.nl, and we will take appropriate steps.</p>
+  <p>Motivingo is not intended for children under 13. We do not knowingly collect personal information from children under 13. If you believe a child has provided personal information, contact us and we will take appropriate steps.</p>
 
   <h2>12. INTERNATIONAL USERS</h2>
   <p>If you use the App outside the Netherlands, your information may be processed in countries where our service providers operate. We take steps to protect data in line with applicable privacy laws.</p>
 
   <h2>13. YOUR PRIVACY RIGHTS (EU/EEA)</h2>
-  <p>If you are located in the EU/EEA, you may have rights under the GDPR, including access, correction, deletion, restriction or objection to processing, and data portability. To exercise these rights, contact: kemal@buhur.nl. We may need to verify your request before acting.</p>
+  <p>If you are located in the EU/EEA, you may have rights under the GDPR, including access, correction, deletion, restriction or objection to processing, and data portability. To exercise these rights, contact us. We may need to verify your request before acting.</p>
 
   <h2>14. CHANGES TO THIS PRIVACY POLICY</h2>
   <p>We may update this Privacy Policy from time to time. If changes are material, we will take reasonable steps to notify you within the App. Continued use after the effective date means you accept the updated Privacy Policy.</p>
 
   <h2>15. CONTACT</h2>
-  <p>For questions, concerns, or requests related to privacy:<br>Email: kemal@buhur.nl</p>
+  <p>For questions, concerns, or requests related to privacy, please contact us through the App.</p>
 </body>
 </html>
