--- a/terms.html
+++ b/terms.html
@@ -12,7 +12,6 @@
     p { margin: 10px 0; }
     ul { margin: 8px 0 8px 18px; }
     .muted { color: #666; }
-    pre { white-space: pre-wrap; }
   </style>
 </head>
 <body>
@@ -22,9 +21,8 @@
   <p>These Terms of Service (“Terms”) govern your access to and use of Motivingo (the “App”), operated by the developer (“we,” “us,” or “our”). By downloading, installing, accessing, or using the App, you agree to be bound by these Terms. If you do not agree, do not use the App.</p>
 
   <h2>1. WHO WE ARE</h2>
-  <p>Motivingo is developed and provided by an independent developer.<br>
-  Contact Email (Support &amp; Legal Notices): kemal@buhur.nl</p>
-  <p>We do not currently operate a dedicated website for the App. If you need support, wish to submit a legal notice, or have questions about these Terms, please contact us by email.</p>
+  <p>Motivingo is developed and provided by an independent developer.</p>
+  <p>We do not currently operate a dedicated website for the App. If you need support, wish to submit a legal notice, or have questions about these Terms, please contact us through the App.</p>
 
   <h2>2. ELIGIBILITY</h2>
   <p>You must be at least 13 years old (or the minimum age required in your country) to use the App. If you are under the age of majority in your jurisdiction, you may only use the App with the consent and supervision of a parent or legal guardian.</p>
@@ -90,7 +88,6 @@
 
   <h2>9. PRIVACY</h2>
   <p>We respect your privacy. Motivingo may process certain data to provide and improve the App (for example: app settings, usage events, or purchase entitlement status).</p>
-  <p>Because we do not have a dedicated website, privacy-related questions or requests should be sent to: kemal@buhur.nl.</p>
   <p>If the App displays a separate in-app Privacy Policy screen, that policy forms part of your agreement with us.</p>
 
   <h2>10. AVAILABILITY, CHANGES, AND UPDATES</h2>
@@ -133,6 +130,6 @@
   <p>We may update these Terms from time to time. If we make material changes, we will take reasonable steps to inform you within the App. Continued use of the App after the effective date of updated Terms means you accept the updated Terms.</p>
 
   <h2>17. CONTACT</h2>
-  <p>Questions about these Terms or the App:<br>Email: kemal@buhur.nl</p>
+  <p>Questions about these Terms or the App: contact us through the App.</p>
 </body>
 </html>
