--- a/support.html
+++ b/support.html
@@ -72,7 +72,7 @@
       <h2 style="margin:0 0 8px 0; font-size:18px;">Contact</h2>
       <p>
         Email support:
-        <a href="mailto:support@motivingo.app">support@motivingo.app</a>
+        <a href="mailto:kemal@buhur.nl">support@motivingo.app</a>
       </p>
       <p class="muted">
         We aim to respond as soon as possible.
